# photoviewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml
apps/api/: pyproject.toml
apps/api/migrations/: README  env.py
apps/api/migrations/versions/: 20260501_0001_initial_schema.py  20260501_0002_add_users_and_source_accounts.py  20260503_0003_add_provider_sync_metadata.py  20260504_0004_add_photo_day_counts.py
apps/api/src/: main.py
apps/api/src/api/: __init__.py
apps/api/src/api/db/: __init__.py  connection.py  defaults.py  models.py  session.py
apps/api/src/api/routes/: map.py  photos.py  thumbnails.py  timeline.py  visits.py
apps/api/src/api/services/: __init__.py  photos.py  timeline.py  visits.py
apps/api/src/photoviewer_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
apps/web/src/: App.tsx  styles.css
apps/web/src/features/map/: PhotoMap.tsx
apps/web/src/features/photos/: BucketDetailPanel.tsx  PhotoViewerModal.tsx  TimelinePhotoPanel.tsx
apps/web/src/features/timeline/: HeatRibbonTimeline.tsx  OverviewTimeline.tsx
apps/web/src/features/visits/: EditableVisitTitle.tsx  VisitsPanel.tsx
apps/web/src/lib/: api.ts
docs/: mvp-spec.md
scripts/: detect_visits.py  ingest_local_folder.py  rebuild_timeline_day_counts.py  sync_onedrive.py
