[project]
name = "photoviewer-api"
version = "0.1.0"
description = "FastAPI backend for the Photoviewer MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pillow>=10.4,<12.0",
  "pillow-heif>=0.18,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
